# Harbr

./: .env  Cargo.toml  Dockerfile  LICENSE  README.md  activity.json  diesel.toml  harbor.config.json  harbr.config.json  harbr.db  repo.json  shortcuts.json
.cargo/: config.toml
.github/workflows/: rust.yml
migrations/2024-11-09-062016_create_users/: down.sql  up.sql
src/: cli.rs  main.rs  schema.rs  thing.rs
src/server/: config.rs  db.rs  error.rs  mod.rs
src/server/auth/: mod.rs
src/server/git/: mod.rs  server.rs
src/server/routes/: mod.rs
src/server/routes/repos/: handlers.rs  mod.rs  models.rs
